crates/store/dl_redap_tests/src/tests/snapshots/dl_redap_tests__tests__unregister_segment__missing_1_should_be_empty_response_data.snap
---
source: crates/store/dl_redap_tests/src/tests/unregister_segment.rs
expression: filtered_batch.format_snapshot(false)
---
┌──────────────────┬──────────────────┬──────────────────┬──────────────────┬─────────────────────┬───────────────────────────┐
│ dalaran_layer_name ┆ dalaran_segment_id ┆ dalaran_layer_type ┆ dalaran_num_chunks ┆ dalaran_schema_sha256 ┆ dalaran_registration_status │
╞══════════════════╪══════════════════╪══════════════════╪══════════════════╪═════════════════════╪═══════════════════════════╡
└──────────────────┴──────────────────┴──────────────────┴──────────────────┴─────────────────────┴───────────────────────────┘
