crates/store/dl_redap_tests/src/tests/snapshots/dl_redap_tests__tests__unregister_segment__products_2_remove_layers_BD_for_segments_13_segments_schema.snap
---
source: crates/store/dl_redap_tests/src/tests/unregister_segment.rs
expression: filter_out_index_ranges(batch.clone()).format_schema_snapshot()
---
rerun_last_updated_at: non-null Timestamp(ns)
rerun_layer_names: non-null List(non-null Utf8)
rerun_num_chunks: non-null UInt64
rerun_segment_id: non-null Utf8
rerun_size_bytes: non-null UInt64
rerun_storage_urls: non-null List(non-null Utf8)
