crates/store/dl_redap_tests/src/tests/snapshots/dl_redap_tests__tests__unregister_segment__products_3_remove_layers_BD_for_all_segments_segments_data.snap
---
source: crates/store/dl_redap_tests/src/tests/unregister_segment.rs
expression: "filtered_batch.filter_columns_by(|f|\nf.metadata().get(\"dalaran:index_kind\").is_none()).unwrap().format_snapshot(false)"
---
┌──────────────────┬───────────────────┬──────────────────┐
│ dalaran_segment_id ┆ dalaran_layer_names ┆ dalaran_num_chunks │
╞══════════════════╪═══════════════════╪══════════════════╡
│ my_segment_id1   ┆ [A, C]            ┆ 4                │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ my_segment_id2   ┆ [A, C]            ┆ 4                │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ my_segment_id3   ┆ [A, C]            ┆ 4                │
└──────────────────┴───────────────────┴──────────────────┘
