crates/store/dl_redap_tests/src/tests/snapshots/dl_redap_tests__tests__unregister_segment__products_4_remove_all_layers_for_segments_23_response_schema.snap
---
source: crates/store/dl_redap_tests/src/tests/unregister_segment.rs
expression: batch.format_schema_snapshot()
---
dalaran_last_updated_at: non-null Timestamp(ns)
dalaran_layer_name: non-null Utf8
dalaran_layer_type: non-null Utf8
dalaran_num_chunks: non-null UInt64
dalaran_registration_status: non-null Utf8
dalaran_registration_time: non-null Timestamp(ns)
dalaran_schema_sha256: non-null FixedSizeBinary(32)
dalaran_segment_id: non-null Utf8
dalaran_size_bytes: non-null UInt64
dalaran_storage_url: non-null Utf8
